Fix SQ issue